# ogl-learning

src/: CMakeLists.txt  main.cpp
src/coupled-resource/: CMakeLists.txt  ResourceCouple.h
src/data-resource/: CMakeLists.txt  DataPool.h  IDataResource.h  ResourceManager.h  TextureData.h
src/gl-resource/: CMakeLists.txt  GLHandlePool.h  GLResourceAllocators.h  GLShaderProgram.h  IGLResource.h  VAO.h
src/glresource/: CMakeLists.txt  GLShader.h  GLTexture.h  VBO.h
